--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
       "react/jsx-filename-extension": 0,
       "react/jsx-one-expression-per-line": 0,
       "no-console": 0,
-      "import/no-extraneous-dependencies": 0
+      "import/no-extraneous-dependencies": 0,
+      "react/state-in-constructor": 0
     }
   },
   "browserslist": {
